Simplify task creation - remove sprint dependency, make sprints optional

--- a/index.html
+++ b/index.html
@@ -335,9 +335,9 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="subtaskSprint" class="form-label">Sprint</label>
+                        <label for="subtaskSprint" class="form-label">Sprint (Optional)</label>
                         <select id="subtaskSprint" class="form-control">
-                            <option value="">Select Sprint</option>
+                            <option value="">No specific sprint</option>
                         </select>
                     </div>
                     <div class="form-group">
