--- a/index.html
+++ b/index.html
@@ -558,6 +558,88 @@
                 </div>
             </div>
         </div>
+
+        <!-- Add Client Modal -->
+        <div id="addClientModal" class="modal hidden">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3>Add New Client</h3>
+                    <button id="closeAddClientModal" class="modal-close">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <div class="form-grid">
+                        <div class="form-group">
+                            <label for="newClientName" class="form-label">Company Name *</label>
+                            <input type="text" id="newClientName" class="form-control" placeholder="Enter company name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="newClientCountry" class="form-label">Country</label>
+                            <select id="newClientCountry" class="form-control">
+                                <option value="MU">🇲🇺 Mauritius</option>
+                                <option value="LV">🇱🇻 Latvia</option>
+                                <option value="KE">🇰🇪 Kenya</option>
+                                <option value="GT">🇬🇹 Guatemala</option>
+                                <option value="IT">🇮🇹 Italy</option>
+                                <option value="EE">🇪🇪 Estonia</option>
+                                <option value="LK">🇱🇰 Sri Lanka</option>
+                                <option value="PL">🇵🇱 Poland</option>
+                                <option value="MX">🇲🇽 Mexico</option>
+                                <option value="AT">🇦🇹 Austria</option>
+                                <option value="AE">🇦🇪 UAE</option>
+                                <option value="RO">🇷🇴 Romania</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="newClientCEO" class="form-label">CEO Name</label>
+                            <input type="text" id="newClientCEO" class="form-control" placeholder="Enter CEO name">
+                        </div>
+                        <div class="form-group">
+                            <label for="newClientContact" class="form-label">Main Contact</label>
+                            <input type="text" id="newClientContact" class="form-control" placeholder="Enter main contact">
+                        </div>
+                        <div class="form-group">
+                            <label for="newClientWebsite" class="form-label">Website</label>
+                            <input type="url" id="newClientWebsite" class="form-control" placeholder="https://example.com">
+                        </div>
+                        <div class="form-group">
+                            <label for="newClientStatus" class="form-label">Status</label>
+                            <select id="newClientStatus" class="form-control">
+                                <option value="starting-soon">Starting Soon (Yellow)</option>
+                                <option value="on-time">On Time (Green)</option>
+                                <option value="in-delay">In Delay (Red)</option>
+                                <option value="graduated">Graduated (Blue)</option>
+                                <option value="progress-meeting">Progress Meeting (Gray)</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="newClientModule" class="form-label">Current Module</label>
+                            <select id="newClientModule" class="form-control">
+                                <option value="0">0 - Intro Sprint</option>
+                                <option value="1">1 - Individual and Company Identity</option>
+                                <option value="2">2 - Core Performance Elements</option>
+                                <option value="3">3 - Market Understanding</option>
+                                <option value="4">4 - Strategy Development</option>
+                                <option value="5">5 - Strategy Execution</option>
+                                <option value="6">6 - Organizational Structure</option>
+                                <option value="7">7 - People & Leadership</option>
+                                <option value="8">8 - Tech & AI Implementation</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="newClientSprint" class="form-label">Current Sprint</label>
+                            <input type="text" id="newClientSprint" class="form-control" placeholder="Enter current sprint name">
+                        </div>
+                        <div class="form-group">
+                            <label for="newClientSpeed" class="form-label">Speed Score</label>
+                            <input type="number" id="newClientSpeed" class="form-control" min="0" max="100" placeholder="Enter speed score">
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button id="addClientBtn" class="btn btn--primary">Create Client</button>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
