Upgrade to intuitive bar chart for better data visualization
- Replace scatter plot with clear, easy-to-read bar chart
- Show Speed and Quality scores side-by-side for each client
- Add color-coded status indicators for instant recognition
- Improve chart height and layout for better visibility
- Add user instructions for chart interaction
- Maintain click/double-click functionality for client management
- Sort clients by leaderboard position for logical ordering
- Enhance tooltips with comprehensive client information

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div class="container">
                     <!-- Performance Analytics Chart Section -->
                     <div class="chart-section">
-                        <h2>Client Performance Analytics</h2>
+                        <h2>Client Performance Overview</h2>
                         <div class="chart-container">
                             <canvas id="performanceChart" width="400" height="200"></canvas>
                         </div>
@@ -115,6 +115,9 @@
                                 <span class="legend-color" style="background-color: #F59E0B;"></span>
                                 <span>Starting Soon</span>
                             </div>
+                        </div>
+                        <div class="chart-instructions">
+                            <p><strong>Instructions:</strong> Click any bar to view client details • Double-click to update scores (Associates only)</p>
                         </div>
                     </div>
 
