--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fast Track - Team Leaderboard</title>
     <link rel="stylesheet" href="style.css">
+    <script>
+        // Redirect to the new landing page
+        window.location.href = 'landing.html';
+    </script>
 </head>
 <body>
     <div id="app">
