--- a/landing.html
+++ b/landing.html
@@ -11,7 +11,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: var(--ft-white);
             padding: var(--space-16);
         }
         
@@ -20,6 +20,7 @@
             border-radius: var(--space-8);
             padding: var(--space-32);
             box-shadow: var(--shadow-lg);
+            border: 1px solid #e5e7eb;
             text-align: center;
             max-width: 500px;
             width: 100%;
