--- a/associate-login.html
+++ b/associate-login.html
@@ -253,8 +253,9 @@
     <script src="app.js"></script>
     <script>
         // Initialize the app for associate login
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', async function() {
             window.app = new FastTrackApp();
+            await window.app.init();
         });
     </script>
 </body>
