--- a/team-login.html
+++ b/team-login.html
@@ -151,8 +151,9 @@
     <script src="app.js"></script>
     <script>
         // Initialize the app for team login
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', async function() {
             window.app = new FastTrackApp();
+            await window.app.init();
         });
     </script>
 </body>
