Fix label mismatch and prevent showLoginPage interference on separate pages

--- a/team-login.html
+++ b/team-login.html
@@ -57,7 +57,7 @@
 
                 <form class="login-form" id="teamLoginForm">
                     <div class="form-group">
-                        <label for="teamCode" class="form-label">Access Code</label>
+                        <label for="accessCode" class="form-label">Access Code</label>
                         <input type="text" id="accessCode" class="form-control" placeholder="Enter your team code" required>
                     </div>
                     
