Add debugging to associate panel modal buttons - Add console logs to Close, Save Changes, and X buttons - Add debugging to saveClientChanges function - This will help identify why buttons are not responsive in associate panels

--- a/associate-login.html
+++ b/associate-login.html
@@ -256,7 +256,7 @@
         <div class="modal-content modal-xl">
             <div class="modal-header">
                 <h3>Client Details</h3>
-                <button class="modal-close" onclick="app.hideAllModals()">&times;</button>
+                <button class="modal-close" onclick="console.log('X button clicked'); app.hideAllModals()">&times;</button>
             </div>
             <div class="modal-body">
                 <div class="client-management-tabs">
@@ -415,8 +415,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button onclick="app.hideAllModals()" class="btn btn--outline">Close</button>
-                <button onclick="app.saveClientChanges()" class="btn btn--primary">Save Changes</button>
+                <button onclick="console.log('Close button clicked'); app.hideAllModals()" class="btn btn--outline">Close</button>
+                <button onclick="console.log('Save Changes button clicked'); app.saveClientChanges()" class="btn btn--primary">Save Changes</button>
             </div>
         </div>
     </div>
