Add navigation options to all panels - Add 'Back to Menu' button to associate, team, and admin panels - Add 'Logout' button functionality - Users can now easily navigate between panels and logout properly

--- a/admin-login.html
+++ b/admin-login.html
@@ -85,6 +85,7 @@
                     </div>
                     <div class="admin-actions">
                         <button onclick="app.showAddTeamModal()" class="btn btn--primary">Add New Team</button>
+                        <button onclick="window.location.href='landing.html'" class="btn btn--outline">Back to Menu</button>
                         <button onclick="app.logout()" class="btn btn--outline">Logout</button>
                     </div>
                 </div>
