--- a/team-login.html
+++ b/team-login.html
@@ -85,6 +85,7 @@
                     </div>
                     <div class="user-info">
                         <span class="team-name" id="currentTeam"></span>
+                        <button onclick="window.location.href='landing.html'" class="btn btn--outline btn--sm">Back to Menu</button>
                         <button onclick="app.logout()" class="btn btn--outline btn--sm">Logout</button>
                     </div>
                 </div>
