Add white Fast Track logo to navigation bars - Copy FastTrack_F_White.png to project directory - Add white logo after logout button in all three dashboards (team, associate, admin) - Add nav-logo-spacer for aesthetic spacing - Add CSS styles for logo positioning and hover effects - Logo appears with proper spacing after logout button in all panels

--- a/admin-login.html
+++ b/admin-login.html
@@ -87,6 +87,8 @@
                         <button onclick="app.showAddTeamModal()" class="btn btn--primary">Add New Team</button>
                         <button onclick="window.location.href='landing.html'" class="btn btn--outline">Back to Menu</button>
                         <button onclick="app.logout()" class="btn btn--outline">Logout</button>
+                        <div class="nav-logo-spacer"></div>
+                        <img src="FastTrack_F_White.png" alt="Fast Track" class="nav-logo">
                     </div>
                 </div>
             </header>
