--- a/associate-login.html
+++ b/associate-login.html
@@ -87,6 +87,8 @@
                         <span class="team-name" id="currentAssociate"></span>
                         <button onclick="window.location.href='landing.html'" class="btn btn--outline btn--sm">Back to Menu</button>
                         <button onclick="app.logout()" class="btn btn--outline btn--sm">Logout</button>
+                        <div class="nav-logo-spacer"></div>
+                        <img src="FastTrack_F_White.png" alt="Fast Track" class="nav-logo">
                     </div>
                 </div>
             </header>
