--- a/admin-login.html
+++ b/admin-login.html
@@ -111,13 +111,13 @@
                             <table class="leaderboard-table">
                                 <thead>
                                     <tr>
-                                        <th>Position</th>
+                                        <th>Weekly Rank</th>
                                         <th>Team</th>
                                         <th>Country</th>
                                         <th>Sprint</th>
-                                        <th>Status</th>
-                                        <th>Weekly Rank</th>
                                         <th>Speed Score</th>
+                                        <th>Quality Score</th>
+                                        <th>Status</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
@@ -256,6 +256,37 @@
                                 <input type="text" id="clientCEO" class="form-control">
                             </div>
                             <div class="form-group">
+                                <label for="clientStartingDate" class="form-label">Start Date</label>
+                                <input type="date" id="clientStartingDate" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="clientGraduationDate" class="form-label">Graduation Date</label>
+                                <input type="date" id="clientGraduationDate" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="clientDelayTracker" class="form-label">Delay Tracker (Days)</label>
+                                <input type="number" id="clientDelayTracker" class="form-control" min="0" placeholder="0">
+                            </div>
+                            <div class="form-group">
+                                <label for="clientAssignedGuru" class="form-label">Assigned GURU for Current Sprint</label>
+                                <select id="clientAssignedGuru" class="form-control">
+                                    <option value="Elena">Elena</option>
+                                    <option value="Ana-Maria">Ana-Maria</option>
+                                    <option value="Vasil">Vasil</option>
+                                    <option value="Diliara">Diliara</option>
+                                    <option value="Jurijs">Jurijs</option>
+                                    <option value="Mihails">Mihails</option>
+                                    <option value="Janis">Janis</option>
+                                    <option value="Olga">Olga</option>
+                                    <option value="Strategy Team">Strategy Team</option>
+                                    <option value="Execution Team">Execution Team</option>
+                                    <option value="Operations Team">Operations Team</option>
+                                    <option value="Leadership Team">Leadership Team</option>
+                                    <option value="Tech Team">Tech Team</option>
+                                    <option value="Program Team">Program Team</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
                                 <label for="clientContact" class="form-label">Main Contact</label>
                                 <input type="email" id="clientContact" class="form-control">
                             </div>
@@ -288,7 +319,7 @@
                                 </select>
                             </div>
                             <div class="form-group">
-                                <label for="clientSprint" class="form-label">Current Sprint</label>
+                                <label for="clientSprint" class="form-label">Current Module</label>
                                 <input type="text" id="clientSprint" class="form-control">
                             </div>
                             <div class="form-group">
@@ -329,7 +360,7 @@
                 
                 <div id="sprintTab" class="tab-content">
                     <div class="current-sprint-section">
-                        <h4>Current Sprint Information</h4>
+                        <h4>Current Module Information</h4>
                         <div class="current-sprint-card">
                             <div class="sprint-module">
                                 <span class="sprint-name" id="currentSprintName">-</span>
