Update sprint progress modal: SPEED SCORE  STARTING DATE
- Changed 'SPEED SCORE' box to 'STARTING DATE' in team sprint progress modal
- Updated JavaScript to display team.startingDate instead of team.speed
- Added startingDate field mapping in loadDataFromSupabase()
- Starting date is automatically populated when associates create clients
- Form field already exists and captures starting date correctly

--- a/team-login.html
+++ b/team-login.html
@@ -353,7 +353,7 @@
                 <!-- Top Metrics Section -->
                 <div class="team-metrics-section">
                     <div class="metric-card">
-                        <div class="metric-label">SPEED SCORE</div>
+                        <div class="metric-label">STARTING DATE</div>
                         <div class="metric-value" id="teamSpeedScore">-</div>
                     </div>
                     <div class="metric-card">
