--- a/associate-login.html
+++ b/associate-login.html
@@ -413,7 +413,7 @@
                         <div class="form-group">
                             <label for="newClientModule" class="form-label">Current Module</label>
                             <select id="newClientModule" class="form-control">
-                                <option value="0">0 - Intro Sprint</option>
+                                <option value="0">0 - Intro Module</option>
                                 <option value="1">1 - Individual and Company Identity</option>
                                 <option value="2">2 - Core Performance Elements</option>
                                 <option value="3">3 - Strategy - Understanding the Market</option>
@@ -422,7 +422,7 @@
                                 <option value="6">6 - Organization & People - Organisational Structure</option>
                                 <option value="7">7 - Organization & People - People and Leadership</option>
                                 <option value="8">8 - Organization & People - Apply Aggressively Tech and AI</option>
-                                <option value="9">9 - Closing Sprint</option>
+                                <option value="9">9 - Closing Module</option>
                             </select>
                         </div>
                         <div class="form-group">
@@ -536,7 +536,7 @@
                             <div class="form-group">
                                 <label for="clientModule" class="form-label">Current Module</label>
                                 <select id="clientModule" class="form-control">
-                                    <option value="0">0 - Intro Sprint</option>
+                                    <option value="0">0 - Intro Module</option>
                                     <option value="1">1 - Individual and Company Identity</option>
                                     <option value="2">2 - Core Performance Elements</option>
                                     <option value="3">3 - Strategy - Understanding the Market</option>
@@ -545,7 +545,7 @@
                                     <option value="6">6 - Organization & People - Organisational Structure</option>
                                     <option value="7">7 - Organization & People - People and Leadership</option>
                                     <option value="8">8 - Organization & People - Apply Aggressively Tech and AI</option>
-                                    <option value="9">9 - Closing Sprint</option>
+                                    <option value="9">9 - Closing Module</option>
                                 </select>
                             </div>
                             <div class="form-group">
