Clean up associate panel UI: remove duplicate headers/buttons and display clients in rows

--- a/associate-login.html
+++ b/associate-login.html
@@ -99,7 +99,7 @@
                     <!-- Clients Section -->
                     <div class="clients-section">
                         <div class="clients-header">
-                            <h2>Your Clients</h2>
+                            <h2 id="clientsHeader">Your Clients</h2>
                             <button onclick="app.showAddClientModal()" class="btn btn--primary">Create New Client</button>
                         </div>
                         <div class="clients-grid" id="associateClientsContainer">
