Add personalized greetings with wave emoji for associates

--- a/associate-login.html
+++ b/associate-login.html
@@ -96,6 +96,11 @@
 
             <main class="dashboard-main">
                 <div class="container">
+                    <!-- Personal Greeting -->
+                    <div class="greeting-section">
+                        <h1 id="personalGreeting">Hello there!</h1>
+                    </div>
+                    
                     <!-- Clients Section -->
                     <div class="clients-section">
                         <div class="clients-header">
